조회페이지 Ajax구현

--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -6,4 +6,43 @@
 		background-color:green;
 		color:white;
 	}
+	.mw_layer {
+		display:none;
+		position:fixed;
+		_position:absolute;
+		top:0;
+		left:0;
+		z-index:10000;
+		width:100%;
+		height:100%;
+	}
+	.mw_layer.open {
+		display:block;
+	}
+	.mw_layer .bg {
+		position:absolute;
+		top:0;
+		left:0;
+		width:100%;
+		height:100%;
+		background:#000;
+		opacity:.5;
+		filter:alpha(opacity=50);
+	}
+	#layer {
+		position:absolute;
+		top:40%;
+		left:40%;
+		width:400px;
+		height:400px;
+		margin:-150px 0 0 -194px;
+		padding:28px 28px 0 28px;
+		border:2px solid #555;
+		background:#fff;
+		font-size:12px;
+		font-family:Tahoma, Geneva, sans-serif;
+		color:#767676;
+		line-height:normal;
+		white-space:normal;
+	}
 </style>
